force-app/main/default/objects/candidate_snapshot__c/candidate_snapshot__c.object-meta.xml
<CustomObject>
    <label>candidate snapshot</label>
    <nameField>
        <displayFormat>snap-{0000}</displayFormat>
        <label>candidate snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>candidate snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>