force-app/main/default/objects/candidate_snapshot__c/fields/candidate_full_name__c.field-meta.xml
<CustomField>
    <fullName>candidate_full_name__c</fullName>
    <label>candidate full name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>