force-app/main/default/objects/candidate_snapshot__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <label>department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>