force-app/main/default/objects/candidate_snapshot__c/fields/stage__c.field-meta.xml
<CustomField>
    <fullName>stage__c</fullName>
    <label>stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>